[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]
write_to = "synthesizer/_version.py"

[tool.poetry]
description = "Synthesizer: A Framework for LLM Powered Data."
authors = ["Owen Colegrove <owen@sciphi.ai>"]
license = "Apache-2.0"
readme = "README.md"
name = 'sciphi-synthesizer'
version = '1.0.5'
packages = [
    { include = "synthesizer" }
]

[tool.poetry.dependencies]
# python version
python = ">=3.9,<3.12"
# package dependencies
fire = "^0.5.0"
pyyaml = "^6.0.1"
retrying = "^1.3.4"

[tool.poetry.extras]
anthropic_support = ["anthropic"]
hf_support = ["accelerate", "datasets", "torch", "transformers"]
vllm_support = ["accelerate", "torch", "vllm"]

all = [
    # anthropic
    "anthropic",
    # hf
    "accelerate",
    "datasets",
    "torch",
    "transformers",
]
all_with_extras = [
    # all
    # anthropic
    "anthropic",
    # hf
    "accelerate",
    "datasets",
    "torch",
    "transformers",
    # More Extras
    "vllm",
]
# To export dependencies to pip, use:
# poetry export -f requirements.txt --with dev --without-hashes --output requirements-dev.txt
# poetry export -f requirements.txt --without-hashes --extras all --output requirements.txt
# poetry export -f requirements.txt --without-hashes --extras all_with_extras --output requirements_with_extras.txt

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "6.1.0"
isort = "5.12.0"
pre-commit = "^3.3.3"
mypy = "^1.5.1"
sourcery = "^1.6.0"
types-requests = "^2.31.0.2"
types-attrs = "^19.1.0"
yapf = "0.40.1"

[tool.black]
line-length = 79

[tool.mypy]
ignore_missing_imports = true
exclude = 'playground/.*|deprecated/.*|dump/.*|docs/source'

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
